--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "beach_day",
   "private": true,
   "dependencies": {
+    "@google/maps": "^1.1.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
