--- a/test/fixtures/wave_forecast_stations.yml
+++ b/test/fixtures/wave_forecast_stations.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  station: 1
   lat: 
   lng: 
+  url: MyString
 
 two:
-  station: 1
   lat: 
   lng: 
+  url: MyString
