--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.3.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.5.3",
+    "gmaps": "^0.4.25",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
