--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "beach_day",
   "private": true,
   "dependencies": {
-    "@google/maps": "^1.1.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -12,6 +11,7 @@
     "bootstrap-autocomplete": "^2.3.7",
     "chart.js": "^2.9.4",
     "chartkick": "^3.2.1",
+    "gmaps": "^0.4.25",
     "jquery": "^3.5.1",
     "js-autocomplete": "^1.0.4",
     "popper.js": "^1.16.1",
