--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.9.4",
     "chartkick": "^3.2.1",
     "jquery": "^3.5.1",
+    "jquery.autocomplete": "^1.2.0",
     "js-autocomplete": "^1.0.4",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
